# coding: utf-8
[metadata]
name = smok
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8
license_files = LICENSE
keywords = iot, client, smok, upload, scada
author = Piotr Maślanka
author_email = pmaslanka@smok.co
description = Library for writing services that behave as SMOK devices
url = https://github.com/smok-serwis/smok-client
project-urls =
    Documentation = https://smok-client.readthedocs.io/
    Code = https://github.com/smok-serwis/smok-client
    Issue tracker = https://github.com/smok-serwis/smok-client/issues
classifier =
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Operating System :: POSIX
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Libraries

[options]
include_package_data = True
zip_safe = False
python_requires = !=2.7.*,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*,!=3.5.*

[options.package_data]
smok = certs/dev.crt, certs/root.crt, certs/rapid.crt

[pycodestyle]
max-line-length = 100

[pep8]
max-line-length = 100

[bdist_wheel]
universal = 1
